GearsetPOC/force-app/main/default/objects/Licence_Usage_Control_Rules__c/Licence_Usage_Control_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Licence Usage Control Rules</label>
</CustomObject>