GearsetPOC/force-app/main/default/objects/Licence_Usage_Control_Rules__c/fields/Admin_And_IS_Emails__c.field-meta.xml
<CustomField>
    <fullName>Admin_And_IS_Emails__c</fullName>
    <description>List of email addresses for sending info about users with final warning, separated by comma</description>
    <label>Admin And IS Emails</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>