GearsetPOC/force-app/main/default/objects/Licence_Usage_Control_Rules__c/fields/Default_No_Manager_Emails__c.field-meta.xml
<CustomField>
    <fullName>Default_No_Manager_Emails__c</fullName>
    <description>Info about users having ManagerId field not populated will be sent to all emails enlisted here. Emails must be separated with comma, no spaces.</description>
    <label>Default No Manager Emails</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>