GearsetPOC/force-app/main/default/objects/Licence_Usage_Control_Rules__c/fields/Final_Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Final_Warning_Threshold__c</fullName>
    <description>Number of days without logging in after what final warning and IS messages are sent.</description>
    <label>Final Warning Threshold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>