GearsetPOC/force-app/main/default/objects/Licence_Usage_Control_Rules__c/fields/Level_Two_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Level_Two_Threshold__c</fullName>
    <description>Number of days without logging in after what second message is sent.</description>
    <label>Level Two Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>